--- a/api/package.json
+++ b/api/package.json
@@ -17,9 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.4"
-  },
-  "devDependencies": {
+    "nodemon": "^3.1.4",
     "prisma": "^5.17.0"
   }
 }
